fixed direct_actuator error in drone.cpp and fase2

--- a/frtl_2023_fase2/CMakeLists.txt
+++ b/frtl_2023_fase2/CMakeLists.txt
@@ -9,7 +9,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(fsm REQUIRED)
 find_package(frtl_2023_drone REQUIRED)
-find_package(frtl_2023_cv_utils REQUIRED)
+#find_package(frtl_2023_cv_utils REQUIRED)
 find_package(eigen3_cmake_module REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(rclcpp REQUIRED)
@@ -43,7 +43,7 @@ ament_target_dependencies(fase2_safe
   rclcpp
   fsm
   frtl_2023_drone
-  frtl_2023_cv_utils
+  #frtl_2023_cv_utils
   Eigen3
 )
 
