--- a/frtl_2024_fase1/CMakeLists.txt
+++ b/frtl_2024_fase1/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(frtl_2023_fase1)
+project(frtl_2024_fase1)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -8,8 +8,8 @@ endif()
 #find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(fsm REQUIRED)
-find_package(frtl_2023_drone REQUIRED)
-#find_package(frtl_2023_cv_utils REQUIRED)
+find_package(frtl_2024_drone REQUIRED)
+#find_package(frtl_2024_cv_utils REQUIRED)
 find_package(eigen3_cmake_module REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(rclcpp REQUIRED)
@@ -18,40 +18,21 @@ find_package(OpenCV 4 REQUIRED)
 
 include_directories(include)
 
-#target_include_directories(drone PUBLIC
-#  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-#  $<INSTALL_INTERFACE:include>
-#)
-
-#add_executable(fase1
-#src/fase1.cpp
-#)
-
-#ament_target_dependencies(fase1
-#  rclcpp
-#  fsm
-#  frtl_2023_drone
-#  frtl_2023_cv_utils
-#  Eigen3
-#)
-
-add_executable(fase1_safe
-  src/fase1_safe.cpp
+add_executable(fase1
+  src/fase1.cpp
 )
 
-ament_target_dependencies(fase1_safe
+ament_target_dependencies(fase1
   rclcpp
   fsm
-  frtl_2023_drone
-  #frtl_2023_cv_utils
+  frtl_2024_drone
+  #frtl_2024_cv_utils
   Eigen3
 )
 
 install(
   TARGETS
-    
-
-    fase1_safe
+    fase1
   DESTINATION lib/${PROJECT_NAME}
 )
 
