--- a/frtl_2024_demo/package.xml
+++ b/frtl_2024_demo/package.xml
@@ -13,6 +13,7 @@
   <depend>fsm</depend>
   <depend>Eigen3</depend>
   <depend>rclcpp</depend>
+  <depend>vision_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
