--- a/frtl_2024_fase1/package.xml
+++ b/frtl_2024_fase1/package.xml
@@ -16,7 +16,7 @@
   <depend>opencv2</depend>
   <depend>nlohmann_json</depend>
   <depend>px4_msgs</depend>
-
+  <depend>vision_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
