fase4 launch file

--- a/frtl_2024_fase4/CMakeLists.txt
+++ b/frtl_2024_fase4/CMakeLists.txt
@@ -36,6 +36,11 @@ install(
   DESTINATION lib/${PROJECT_NAME}
 )
 
+# Install launch files
+install(DIRECTORY launch/
+  DESTINATION share/${PROJECT_NAME}/launch
+)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   set(ament_cmake_copyright_FOUND TRUE)
