--- a/frtl_2024_cv_utils/package.xml
+++ b/frtl_2024_cv_utils/package.xml
@@ -10,16 +10,14 @@
 
   <!-- Build tools -->
   <buildtool_depend>ament_cmake</buildtool_depend>
-  <buildtool_depend>ament_cmake_python</buildtool_depend>
+  <buildtool_depend>ament_python</buildtool_depend>
 
   <!-- Package dependencies -->
   <depend>rclpy</depend>
-  <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>cv_bridge</depend>
   <depend>ultralytics</depend>
-  <depend>opencv</depend> <!-- OpenCV for image processing -->
-  <depend>vision_msgs</depend> <!-- for object detection topics -->
+  <depend>vision_msgs</depend>
 
   <!-- Test dependencies -->
   <test_depend>ament_lint_auto</test_depend>
